# simplepw

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  setup.py
dist_old/: simplepw-0.2.2-py3-none-any.whl
simple_pw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simplepw/: main.py  methods.py
simplepw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: test.py
