[tool.poetry]
name = "simple-pw"
version = "0.1.8"
description = "simple cli tool for creating and managing securely generated passwords"
authors = ["pajhe <piejeys@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.8"
cryptography = "*"
click = "^8.0.3"
bcrypt = "*"

[tool.poetry.scripts]
spw = "spw.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"